<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollview"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/room_id_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_id_text"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/main_button"
                android:text="@string/share"
                android:textColor="@color/colorBackground"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_share"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/main_button"
                android:text="@string/room_connect"
                android:textColor="@color/colorBackground"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/member_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_join"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="0"
                android:textColor="@color/text"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollview"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/connected_members"
            android:textColor="?android:attr/actionMenuTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <view
            android:id="@+id/svLocalView"
            class="io.skyway.Peer.Browser.Canvas"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@+id/tvMessage"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone" />


        <GridView
            android:id="@+id/grdRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMessage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:numColumns="1" />


    </RelativeLayout>
</RelativeLayout>